--- a/indexBG1.html
+++ b/indexBG1.html
@@ -65,10 +65,10 @@
       </script>
     </div>
     <div class="card">
-      <img src="image upload" alt="" />
+      <img src="https://i.ibb.co/bWW1RX1/icon.png" alt="" />
     <div class="content">
-        <h1>Name : Salahudeen</h1>
-        <h1>SIZE : 100 MB</h1>
+        <h1>Bus simulator extreme road</h1>
+        <h1>480 MB</h1>
       <div class="button">
          <a href="#" class="btns">
           <button type="button" class="button">
